# tactics

./: .gitignore  Cargo.toml  bak.json  build.rs  techtree  world.json
adapterlibgfx/: Cargo.toml
adapterlibgfx/examples/: intel_headless_frame.rs  intel_headless_rotating_triangle.rs  triangle_window.rs
adapterlibgfx/src/: api.rs  cabi.rs  command.rs  lib.rs  records.rs  renderer.rs  texture.rs  vertex.rs  window.rs
adapterlibgfx/tests/: cabi_flow.rs
src/: adapterlibgfx.rs  app.rs  ase_assets.rs  cli.rs  embedded_assets.rs  game_object.rs  loadscreen.rs  main.rs  tactics_srv.rs  terrain_rules.rs  ts_ui.rs  ui_cli.rs  wldgenerator.rs  worldviewer.rs
src/chatserver/: Cargo.toml  lib.rs  server.rs  tailwind.css
src/chatserver/trueos-chat/: Cargo.toml
