[package]
name = "tactics"
version = "0.1.0"
edition = "2024"
publish = false

[package.metadata.trueos-blueprint]
asset-dirs = ["ts_freepack"]
asset-files = ["world.json", "techtree"]

[features]
default = ["desktop-gfx"]
chat = ["dep:reqwest"]
desktop-gfx = ["dep:adapterlibgfx"]
trueos-blueprint = []

[dependencies]
adapterlibgfx = { path = "adapterlibgfx", optional = true }
asefile = "0.3.8"
png = { version = "0.18.1", default-features = false }
reqwest = { version = "=0.13.3", default-features = false, features = ["json", "rustls"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "=1.52.3", features = ["rt-multi-thread", "sync", "time", "net"] }

[profile.dev.package.asefile]
opt-level = 2
