[package]
name = "adapterlibgfx"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "adapterlibgfx"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
futures = "0.3.32"
once_cell = "1.21.3"
parking_lot = "0.12.5"
wgpu = "24.0.5"
winit = "0.30.13"

[features]
default = ["ffi"]
ffi = []
shaderson = []
